Cambio suggestions y agregadas User suggestions y userReviews
